--- a/css/testSeries.css
+++ b/css/testSeries.css
@@ -40,7 +40,7 @@ header .head span {
     display: none;
 }
 
-.footer-down{
+.footer-down {
     position: absolute;
     bottom: 0%;
     width: 100%;
@@ -61,13 +61,13 @@ footer .copy {
 }
 
 
-.top{
+.top {
     display: flex;
     align-items: center;
     margin: 10px 0;
 }
 
-.persentage{
+.persentage {
     background-color: #fff;
     width: 50%;
     height: 10px;
@@ -77,26 +77,27 @@ footer .copy {
     margin: 5px;
 }
 
-.occer{
+.occer {
     border-radius: 5px;
     background-color: green;
     width: 0%;
     height: 100%;
 }
 
-.attempted-que{
+.attempted-que {
     margin: 5px;
-    width: auto;
+    width: 100px;
     height: 50px;
-    background-color: yellow;
+    background-color: #ffe2c03b;
     border: 1px black solid;
     border-radius: 7px;
     align-content: center;
-    font-size: 20px;
+    text-align: center;
+    font-size: 30px;
     cursor: pointer;
 }
 
-.time{
+.time {
     margin: 5px;
     display: flex;
     align-items: center;
@@ -202,7 +203,7 @@ li input {
 
 .result {
     width: 80%;
-    height: 400px;
+    min-height: 400px;
     margin: 50px auto;
     padding-top: 50px;
     text-align: center;
@@ -214,6 +215,7 @@ li input {
 }
 
 .result button {
+    margin: 20px;
     width: 110px;
     height: 40px;
     font-size: 18px;
@@ -225,4 +227,11 @@ li input {
     background-color: green;
     border: none;
     outline: none;
+}
+
+
+iframe{
+    width: 100%;
+    height: 100vh;
+    border-radius: 20px;
 }
